err.log
Sun, 13 Aug 2017 15:11:30 GMT express-session deprecated undefined resave option; provide resave option at index.js:17:9
Sun, 13 Aug 2017 15:11:30 GMT express-session deprecated undefined saveUninitialized option; provide saveUninitialized option at index.js:17:9
/Users/luozhong/work/G7/project/UIMangerServer/apis/getFiles.js:8
import { getFiles, dealRequest } from '../common/utils';
^^^^^^
SyntaxError: Unexpected token import
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at module.exports (/Users/luozhong/work/G7/project/UIMangerServer/routes/index.js:5:6)
    at Object.<anonymous> (/Users/luozhong/work/G7/project/UIMangerServer/index.js:30:20)
